--- a/style.css
+++ b/style.css
@@ -1126,7 +1126,7 @@ width: 600px;
         }
     
     #page3 {
-        height: 50vh;
+        height: auto;
     }
     #page3 {
         width: 80%;
@@ -1141,7 +1141,7 @@ width: 600px;
         margin: 0 auto; /* This will horizontally center all direct children of #page1 and .banner */
     }
     #page5 {
-        height: 90vh;
+        height: auto;
     }
     #page5 .page5-upper{
         height: auto;
